<resources>
    <string name="app_name">BTS Reception</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_about_phone">About phone</string>
    <string name="str_edit">Edit</string>
    <string name="str_phone_number">Phone number</string>
    <string name="str_model_name">Model name</string>
    <string name="str_model_number">Model number</string>
    <string name="str_serial_number">Serial number</string>
    <string name="str_imei_slot_1">IMEI(slot 1)</string>
    <string name="str_imei_slot_2">IMEI(slot 2)</string>
    <string name="str_status_information">Status information</string>
    <string name="str_legal_information">Legal information</string>
    <string name="str_software_information">Software information</string>
    <string name="str_battery_information">Battery information</string>
</resources>