<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="0dp">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:elevation="0dp">
                
                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_left"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:text="@string/str_about_phone"/>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Odilbek HUAWEI Y6P"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <Button
                android:layout_marginVertical="20dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/str_edit"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:background="@drawable/background_grey"
                app:backgroundTint="@null"/>

            <LinearLayout
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_phone_number"
                    android:textSize="18sp"
                    android:textColor="#555555"/>

                <TextView
                    android:id="@+id/userNumber"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="+998 97 775 17 79"
                    android:textSize="18sp"
                    android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_model_name"
                    android:textSize="18sp"
                    android:textColor="#555555"/>

                <TextView
                    android:id="@+id/phoneModelName"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="HUAWEI Y6 P"
                    android:textSize="18sp"
                    android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_model_number"
                    android:textSize="18sp"
                    android:textColor="#555555"/>

                <TextView
                    android:id="@+id/phoneModelNumber"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="HUAWEI MED-LX9N"
                    android:textSize="18sp"
                    android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_serial_number"
                    android:textSize="18sp"
                    android:textColor="#555555"/>

                <TextView
                    android:id="@+id/serialNumber"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="R555FDVDFV"
                    android:textSize="18sp"
                    android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_imei_slot_1"
                    android:textSize="18sp"
                    android:textColor="#555555"/>

                <TextView
                    android:id="@+id/imeiSlot1"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="55558855555"
                    android:textSize="18sp"
                    android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_imei_slot_2"
                    android:textSize="18sp"
                    android:textColor="#555555"/>

                <TextView
                    android:id="@+id/imeiSlot2"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5555555"
                    android:textSize="18sp"
                    android:textColor="#000000"/>
            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_grey"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_status_information"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <View
                    android:layout_marginVertical="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_legal_information"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <View
                    android:layout_marginVertical="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_software_information"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <View
                    android:layout_marginVertical="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_battery_information"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_light_blue"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Looking for something else?"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_marginVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Software update"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#008EFF"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Reset"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="#008EFF"/>

            </LinearLayout>
            
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    
</androidx.coordinatorlayout.widget.CoordinatorLayout>